# demon

./: .gitignore  Cargo.toml  Makefile  ddm.pd  ensemble-1.pd  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: design.org  meta.org  spec.org
docs/demon-docs/: Cargo.toml  build.rs  index.html  package.json  webpack.config.js
docs/demon-docs/src/: lib.rs
docs/demon-docs/tests/: mod.rs
docs/ref/: .#deps.org
docs/release/: v0.1.org  v1.org
script/: build-efi.py  macos-init.sh  set-version.sh
sys/audio/: Cargo.toml
sys/audio/src/: engine.rs  lib.rs
sys/brain/: Cargo.toml
sys/brain/src/: lib.rs
sys/cli/: Cargo.toml
sys/cli/src/: clipboard.rs  lib.rs
sys/cli/src/app/: mod.rs  raw_backend.rs  ui_state.rs
sys/cli/src/app/components/: header_details.rs
sys/cli/src/tests/: fake_output.rs
sys/cli/src/ui/: calendar.rs  clock.rs  color.rs  keylog.rs  mod.rs  table.rs  tree.rs
sys/cmd/: Cargo.toml
sys/cmd/src/: lib.rs
sys/config/: Cargo.toml
sys/config/src/: file_source.rs  handle.rs  lib.rs  refreshable_entities.rs  store.rs  test_source.rs  tests.rs
sys/core/: Cargo.toml
sys/core/macros/: Cargo.toml  expand.rs  lib.rs
sys/core/src/: controller.rs  init.rs  lib.rs  range_set.rs  registrar.rs  service.rs  shutdown.rs  tests.rs
sys/core/src/proto/: coding.rs  dm.rs  frame.rs  mod.rs  range_set.rs  shared.rs  transport.rs  transport_error.rs  varint.rs
sys/crypto/: Cargo.toml
sys/db/: Cargo.toml  db
sys/db/src/: postgres.rs
sys/ddsl/: Cargo.toml
sys/ddsl/src/: lib.rs
sys/ddsl/src/sdk/: mod.rs
sys/ddsl/src/sdk/std/: mod.rs
sys/ddsl/src/sdk/std/echo/: mod.rs  test.rs
sys/ddsl/src/test/: mod.rs
sys/ddsl/src/utils/: mod.rs  pckg.rs  state.rs
sys/macros/: Cargo.toml  expand.rs  lib.rs
sys/net/: Cargo.toml
sys/net/src/: codec.rs  lib.rs  packet.rs
sys/os/: Cargo.toml
sys/os/platform/efi/: Cargo.toml
sys/os/src/: main.rs
sys/usr/: Cargo.toml
tests/benches/: bench.rs
utils/aws/: Cargo.toml
utils/build-utils/: Cargo.toml
utils/build-utils/src/: git.rs  lib.rs  version.rs
utils/org/: Cargo.toml
utils/prometheus/: Cargo.toml
utils/prometheus/src/: lib.rs  networking.rs  sourced.rs
utils/tests/: Cargo.toml
utils/tools/: Cargo.toml  build.rs
utils/tools/src/: ascii_ext.rs  hostname.rs  lib.rs  timing.rs  unix_io.rs
utils/tools/src/net/: connection.rs  mod.rs  sniffer.rs  utilization.rs
utils/tools/src/net/dns/: client.rs  resolver.rs
utils/tools/src/os/: errors.rs  linux.rs  lsof.rs  lsof_utils.rs  mod.rs  shared.rs  windows.rs
