[package]
name = "demon-docs"
version = "0.0.1"
authors = ["richardwesthaver <richard.westhaver@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#demon = { path = "../../", features=["extra"] }
log = "0.4.8"
wasm-logger = "0.2"
wasm-bindgen = { version = "0.2.59", features = ["serde-serialize"] }
futures-channel-preview = "0.3.0-alpha.19"

[dev-dependencies]
wasm-bindgen-test = "0.3.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = { version = "0.7.0", features = ["small_rng"]}

# Changes here must be reflected in `build.rs`
[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dependencies]
wasm-bindgen = "0.2.59"

# Changes here must be reflected in `build.rs`
[target.'cfg(all(target_arch = "wasm32", not(target_os="wasi"), not(cargo_web)))'.dev-dependencies]
wasm-bindgen-test = "0.3.9"