[package]
name = "demon_brain"
version = "0.0.1"
authors = ["richardwesthaver <richard.westhaver@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.25.3"
deepspeech = "0.9.0"

[dev-dependencies]
deepspeech = { version = "0.9.0", features = ["dynamic"] } # for testing master branch: https://github.com/mozilla/DeepSpeech/tree/master