[package]
name = "demon_cli"
version = "0.0.1"
authors = ["richardwesthaver <richard.westhaver@gmail.com>"]
edition = "2018"

[dependencies]
demon_core = { path = "../core" }
demon_tools = { path = "../tools" }
clap = { version = "3.0.0-beta.2" }
sysinfo = "0.15.3"
tui = { version = "0.13.0", features = ["crossterm"] }
crossterm = "0.18.0"
chrono = "0.4.19"
unicode-width = "0.1.8"
names = "0.11.0"
tracing = "0.1.22"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
thiserror = "1.0.21"

[target.'cfg(not(target_os = "unknown"))'.dependencies]
rpassword = "5.0.0"

[dev-dependencies]
tempfile = "3.1.0"