[package]
name = "demon_core"
version = "0.0.1"
authors = ["richardwesthaver <richard.westhaver@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
default = []
hf1 = ["default", "panic-halt", "riscv", "riscv-rt", "hifive1", "embedded-hal"]

[dependencies]
petgraph = "0.5.1"
bytes = "1.0.0"
thiserror = "1.0.23"
tracing = "0.1.22"
tokio = { version = "1.0.1", features=["rt", "sync"] }
tokio-util = "0.6.0"
tokio-stream = "0.1"
futures = { version = "0.3.8", features = ["thread-pool"] }
http = "0.2.2"
hifive1 = { version = "0.9.1", features = ["board-hifive1-revb"], optional = true }
embedded-hal = { version = "0.2.3", optional = true }
panic-halt = { version = "0.2.0", optional = true }
riscv = { version = "0.6.0", optional = true }
riscv-rt = { version = "0.8.0", optional = true }

[dev-dependencies]
assert_matches = "1.1"
hex-literal = "0.3.0"
tracing-subscriber = { version = "0.2.15", default-features = false, features = ["env-filter", "fmt", "chrono"]}
lazy_static = "1"
quickcheck = "1.0.3" # 1.0 release coming soon..
quickcheck_macros = "0.9.1"