[package]
name = "demon_core"
version = "0.0.1"
authors = ["richardwesthaver <richard.westhaver@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
default = ["full"]
full = []

[dependencies]
petgraph = "0.5.1"
bytes = "1.0.1"
thiserror = "1.0.23"
tracing = "0.1.23"
tokio = { version = "1.2", features=["rt", "sync", "net", "macros"] }
tokio-util = "0.6.3"
tokio-stream = "0.1.3"
futures = { version = "0.3.12", features = ["thread-pool"] }
http = "0.2.3"

[dev-dependencies]
assert_matches = "1.1"
hex-literal = "0.3.0"
tracing-subscriber = { version = "0.2.15", default-features = false, features = ["env-filter", "fmt", "chrono"]}
lazy_static = "1.4.0"