[package]
name = "aws"
version = "0.1.0"
authors = ["richardwesthaver <richard.westhaver@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "master"}
serde_json = "1.0"
rusoto_core = "0.46.0"
rusoto_credential = "0.46.0"
rusoto_ec2 = "0.46.0"
rusoto_cloudwatch = "0.46.0"
rusoto_logs = "0.46.0"
rusoto_lambda = "0.46.0"