[package]
name = "demon_prometheus"
version = "0.1.0"
authors = ["richardwesthaver <richard.westhaver@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
prometheus = { version = "0.11.0", default-features = false }
futures-util = { version = "0.3.1", default-features = false, features = ["io"] }
derive_more = "0.99"
async-std = { version = "1.6.5", features = ["unstable"] }
hyper = { version = "0.14.4", features = ["full"] }
tokio = { version = "1.2", features = ["full"] }