[package]
name = "demon_tools"
version = "0.0.1"
authors = ["richardwesthaver <richard.westhaver@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
dunce = "1.0.1"
async-trait = "0.1.42"
trust-dns-resolver = "0.18.1"
regex = "1.3.1"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["rt-core", "sync"] }
failure = "0.1.6"
ipnetwork = "0.17.0"
pnet = "0.27.2"
crossterm = "0.18.0"
hostname = { version = "0.3", features = ["set"] }

[target.'cfg(target_os="windows")'.dependencies]
netstat2 = "0.9.0"
sysinfo = "0.16.4"

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.9.1"

[target.'cfg(target_os="windows")'.build-dependencies]
http_req = "0.7.0"
zip = "0.5.6"